--- a/package.json
+++ b/package.json
@@ -115,6 +115,10 @@
     "electron-packager": "12.2.0",
     "electron-react-devtools": "^0.5.3",
     "electron-rebuild": "1.8.2",
+    "grunt": "^1.3.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-node-minify": "^1.5.0",
+    "grunt-package-minifier": "^0.2.1",
     "husky": "0.14.3",
     "lint-staged": "7.3.0",
     "node-sass-chokidar": "0.0.3",
